--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -7,20 +7,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">My E-commerce Application</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li th:each="product : ${products}">
-                <a th:href="@{/products/{id}(id=${product.id})}" th:text="${product.name}"></a>
-            </li>
-        </ul>
-    </div>
+    <a class="navbar-brand" href="#">Welcome to our e-shop</a>
 </nav>
 
 <div class="container mt-5">
