--- a/src/main/resources/templates/productsAdmin.html
+++ b/src/main/resources/templates/productsAdmin.html
@@ -1,47 +1,71 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Products Mangement System</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-          crossorigin="anonymous">
+    <title>e-Shop</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/index">My E-commerce Application</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#" th:href="@{/index}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/users/index}">Customers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/orders/index}">Orders</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 <div align="left" class="container my-2"></div>
 
-<h1> Products List</h1>
-<a th:href = "@{/newProductForm}" class ="btn btn-primary btn-sm mb-3"> Add Product</a>
-<table border="1" class = "table table-striped table responsive-md">
-    <thead>
-    <tr>
-        <th>Product ID</th>
-        <th>Product Name</th>
-        <th>Product Category</th>
-        <th>Product Photo</th>
-        <th>Product Stock</th>
-        <th>Product Price</th>
-        <th>Actions</th>
-    </tr>
+<div class="container mt-5">
+    <div class="container">
+        <h1 class="my-4">Products</h1>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Product ID</th>
+                    <th>Product Name</th>
+                    <th>Product Category</th>
+                    <th>Product Photo</th>
+                    <th>Product Stock</th>
+                    <th>Product Price</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="product : ${products}">
+                    <td th:text="${product.id}">Product ID</td>
+                    <td th:text="${product.name}">Name</td>
+                    <td th:text="${product.productCategory}">Product Category</td>
+                    <td th:text="${product.photo}">Photo</td>
+                    <td th:text="${product.stock}">Stock</td>
+                    <td th:text="${product.price}">Price</td>
+                    <td> <a th:href="@{/showFormForUpdate/{id}(id=${product.id})}" class="btn btn-primary">Update</a>
+                        <a th:href="@{/deleteProduct/{id}(id=${product.id})}" class="btn btn-danger">Delete</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <a th:href = "@{/newProductForm}" class ="btn btn-primary btn-sm mb-3"> Add Product</a>
+    </div>
+</div>
 
-    </thead>
-    <tbody>
-    <tr th:each="product : ${products}">
-        <td th:text="${product.id}">Product ID</td>
-        <td th:text="${product.name}">Name</td>
-        <td th:text="${product.productCategory}">Product Category</td>
-        <td th:text="${product.photo}">Photo</td>
-        <td th:text="${product.stock}">Stock</td>
-        <td th:text="${product.price}">Price</td>
-        <td> <a th:href="@{/showFormForUpdate/{id}(id=${product.id})}" class="btn btn-primary">Update</a>
-            <a th:href="@{/deleteProduct/{id}(id=${product.id})}" class="btn btn-danger">Delete</a>
-        </td>
+<script th:src="@{/js/bootstrap.min.js}"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 
-    </tr>
 
-</tbody>
-</table>
 </body>
 </html>
