--- a/src/main/resources/templates/usersAdmin.html
+++ b/src/main/resources/templates/usersAdmin.html
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Users Management System</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-        crossorigin="anonymous">
+  <title>e-Shop</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/index">My E-commerce Application</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#" th:href="@{/index}">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" th:href="@{/orders/index}">Orders</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" th:href="@{/products/index}">Products</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 <div align="left" class="container my-2"></div>
 
-<h1> Products List</h1>
-<a th:href = "@{/newUserForm}" class ="btn btn-primary btn-sm mb-3"> Add User</a>
+<h1> Customers List</h1>
+
 <table border="1" class = "table table-striped table responsive-md">
   <thead>
   <tr>
-    <th>User Id</th>
-    <th>User firstName</th>
-    <th>User lastName</th>
-    <th>User email</th>
-    <th>User password</th>
+    <th>Id</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Email</th>
+    <th>Password</th>
     <th>Actions</th>
   </tr>
 
@@ -41,5 +57,13 @@
 
   </tbody>
 </table>
+<a th:href = "@{/newUserForm}" class ="btn btn-primary btn-sm mb-3"> Add User</a>
+</div>
+</div>
+<script th:src="@{/js/bootstrap.min.js}"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
 </body>
 </html>
