--- a/src/main/resources/templates/productsAdmin.html
+++ b/src/main/resources/templates/productsAdmin.html
@@ -58,8 +58,9 @@
                 <td th:text="${product.name}" class="align-middle">Name</td>
                 <td th:text="${product.productCategory}" class="align-middle">Product Category</td>
                 <td>
-                    <img th:src="${product.photo}" class="img-fluid rounded" alt="Product Photo" style="max-height: 100px">
+                    <img src="/productphotos/avaPic.png" class="img-fluid rounded" alt="Product Photo" style="max-height: 100px">
                 </td>
+
                 <td th:text="${product.stock}" class="align-middle">Stock</td>
                 <td th:text="${product.price}" class="align-middle">Price</td>
                 <td class="align-middle">
