--- a/src/main/resources/templates/order-form.html
+++ b/src/main/resources/templates/order-form.html
@@ -11,17 +11,15 @@
     <a class="navbar-brand" href="/index">My E-commerce Application</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-    </button>class="navbar navbar-expand-lg navbar-light bg-light">
+    </button>
     <a class="navbar-brand" href="/index">Thank you for choosing us!</a>
 </nav>
-
-
 <div class="container mt-5">
     <h1>Order Form</h1>
-    <form method="POST" action="#" th:action="@{/submitOrder}">
-        <div class="form-group">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" class="form-control" required>
+    <form method="POST" action="/saveOrder" th:action="@{/saveOrder}">
+    <div class="form-group">
+            <label for="id">User's ID:</label>
+            <input type="text" id="id" name="id" class="form-control" required>
         </div>
         <div class="form-group">
             <label for="address">Address:</label>
@@ -29,18 +27,11 @@
         </div>
         <div class="form-group">
             <label for="product">Product:</label>
-            <select class="form-control" id="product" name="product">
-                <option value="">Choose a product</option>
-                <option th:each="product : ${products}" th:value="${product.id}">
-                    <span th:text="${product.name}"></span>
-                    <span> (Stock: </span>
-                    <span th:text="${product.stock}"></span>
-                    <span>, Price: </span>
-                    <span th:text="${product.price}"></span>
-                    <span>)</span>
-                </option>
+            <select name="product" id="product" class="form-control" required>
+                <option th:each="product : ${products}" th:value="${product.id}" th:text="${product.name}"></option>
             </select>
         </div>
+
         <div class="form-group">
             <label for="quantity">Quantity:</label>
             <input type="number" id="quantity" name="quantity" class="form-control" required min="1">
@@ -48,6 +39,7 @@
         <button type="submit" class="btn btn-primary">Submit Order</button>
     </form>
 </div>
+
 
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
